small gap fix

--- a/frontend/src/components/BookingPage/BookingPage.css
+++ b/frontend/src/components/BookingPage/BookingPage.css
@@ -36,7 +36,7 @@
 .book-buttons{
     display: flex;
     justify-content: center;
-    gap: 2vw;
+    gap: 4px;
     width: 90%;
     max-width: 475px;
     text-align: center;
